# mactop-report

./: .gitignore  README.md  dashboard.py  devplan.md  mactop_monitor.md  mactop_monitor.py  pyproject.toml  requirements.txt  start_monitor.py  test_plan.md
src/mactop_report/: analyze.py  cli.py  record.py  utils.py  visualize.py
tests/: test_analyze.py  test_cli.py  test_record.py  test_utils.py  test_visualize.py
