[project]
name = "mactop-monitor"
version = "0.1.0"
description = "enhanced mactop, with data recording, analyzing and visualization"
authors = [
    {name = "HaoyangWu",email = "riafmz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "rich (>=10)",
    "typer (>=0.4)",
    "requests (>=2.0)",
    "textual (>=0.1.18)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
